reload feature/welcome message

--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
   </head>
   <body>
       <section class = "search-section" role="region">
-      <h1> Page Turner </h1>
+      <h1 class = "restartButton"> Page Turner </h1>
       <form class = "js-search-form">
         <label for = "initial-search"> Search: </label>
         <div class = "search-bar">
-          <input type = "text" class = "initial-search-title"     Placeholder = "Book Title">
+          <input type = "text" class = "initial-search-title" Placeholder = "Book Title" required>
           <input type = "image" src =     "https://cdn0.iconfinder.com/data/icons/education-8/512/Book_search-512.png" alt = "Search" class =   "initial-search-icon">
         </div>
       </form>
     </section>
+
     <main role="main">
+      <h2 class="welcome">Welcome to Page Turner! <br><br> Find reviews of your favorite books</h2>
       <section class = "js-book-overview" role="region">
         <div class="book-overview-noreviews">
           <figure class = "js-book-cover">
