added additional instructions

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link href="https://fonts.googleapis.com/css?family=Catamaran|Lato:400i" rel="stylesheet">
     <link href="normalize.css" rel="stylesheet" type="text/css" />
     <link href="style.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" 
+     integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   </head>
   <body>
@@ -22,6 +24,10 @@
     </section>
 
     <main role="main">
+      <div class = "instruction">
+        <i class="fas fa-angle-double-up"></i>
+        <h4>Search and Click a book to see details</h4>
+    </div>
       <h2 class="welcome">Welcome to Page Turner! <br><br> Find reviews of your favorite books</h2>
       <section class = "js-book-overview" role="region">
         <div class="book-overview-noreviews">
