--- a/index.html
+++ b/index.html
@@ -10,10 +10,20 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" 
      integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
   </head>
   <body>
       <section class = "search-section" role="region">
-      <h1 class = "restartButton"> Page Turner </h1>
+      <div>
+        <img src="./img/pageTurnerFav.png" alt="favicon" class="favicon"/>
+        <h1 class = "restartButton"> Page Turner </h1>
+      </div>
       <form class = "js-search-form">
         <label for = "initial-search"> Search: </label>
         <div class = "search-bar">
